src/objects/Config__mdt.object
<CustomObject>
    <description>Configuration for alerts</description>
    <fields>
        <fullName>Alert_URL__c</fullName>
        <description>Alert URL endpoint</description>
        <label>Alert URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <description>The slack channel where alerts should be sent e.g., #alerts</description>
        <inlineHelpText>The slack channel where alerts should be sent e.g., #alerts</inlineHelpText>
        <label>Channel Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emoji_Icon__c</fullName>
        <description>Emoji to use as icon for slack message e.g., :smiley:</description>
        <inlineHelpText>Emoji to use as icon for slack message e.g., :smiley:</inlineHelpText>
        <label>Emoji Icon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username of the user the alert will be sent as e.g., salesforcebot</description>
        <inlineHelpText>Username of the user the alert will be sent as e.g., salesforcebot</inlineHelpText>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Config</label>
    <pluralLabel>Configs</pluralLabel>
</CustomObject>